Broaden vector skills